# pyfplib

./: .gitignore  .pylintrc  CHANGELOG.md  Makefile  README.md  dev-requirements.txt  pyproject.toml  pytest.ini
pyfplib/: __about__.py  __init__.py  either.py  errors.py  functions.py  option.py  result.py
requirements/: dev.txt
src/pyfplib/: __about__.py  __init__.py  errors.py  functions.py  functools.py  iterator.py  result.py
tests/functools/: test_functools.py
tests/option/: test_option.py
tests/result/: test_result.py
