[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyfplib"
dynamic = ["version"]
description = "A functional programming library for Python"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = [
  "algorithm",
  "fp",
  "functional-programming",
  "function-library",
  "monad",
  "result",
  "result-monad",
  "option",
  "option-monad",
]
authors = [{ name = "comet11x", email = "comet11x@protonmail.com" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

dependencies = []

[project.urls]
Documentation = "https://github.com/Comet11x/pyfplib/blob/main/README.md"
Issues = "https://github.com/Comet11x/pyfplib/issues"
Source = "https://github.com/Comet11x/pyfplib"

[tool.hatch.build.targets.wheel]
packages = ["src/pyfplib"]

[tool.hatch.version]
path = "src/pyfplib/__about__.py"

[tool.hatch.envs.test]
dependencies = ["pytest"]
[[tool.hatch.envs.test.matrix]]
python = ["3.12", "3.13", "3.14"]

[tool.hatch.envs.test.scripts]
test = "pytest {args}"

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]
addopts = "-v --strict-markers"
python_classes = "Test* *Test"
log_format = "%(asctime)s - %(levelname)s - %(name)s - %(message)s"
log_level = "DEBUG"
log_cli = true
markers = "core"
filterwarnings = [
    "ignore::DeprecationWarning"
]

[tool.hatch.envs.default]
dependencies = [
  "ruff",
  "black",
  "mypy",
  "coverage[toml]>=6.5",
  "pytest"
]


[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = ["- coverage combine", "coverage report"]
cov = ["test-cov", "cov-report"]

[[tool.hatch.envs.all.matrix]]
python = ["3.11", "3.12"]

[tool.hatch.envs.lint]
detached = true
dependencies = ["black>=24.8.0", "mypy>=1.0.0", "ruff>=0.6.8"]
[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:pyfplib tests}"
style = ["ruff {args:.}", "black --check --diff {args:.}"]
fmt = ["black {args:.}", "ruff --fix {args:.}", "style"]
all = ["style", "typing"]

[tool.black]
target-version = ["py37"]
line-length = 120
skip-string-normalization = true

[tool.ruff]
target-version = "py38"  # Or higher, like "py311"; supports "py37" through "py313"
line-length = 120
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105",
  "S106",
  "S107",
  # Ignore complexity
  "C901",
  "PLR0911",
  "PLR0912",
  "PLR0913",
  "PLR0915",
]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.isort]
known-first-party = ["pyfplib"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.coverage.run]
source_pkgs = ["pyfplib", "tests"]
branch = true
parallel = true
omit = ["src/pyfplib/__about__.py"]

[tool.coverage.paths]
pyfplib = ["src/pyfplib", "*/pyfplib/src/pyfplib"]
tests = ["tests", "*/pyfplib/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]

#[project.scripts]
#run_pyfplib = "pyfplib:main"